/*
 * Copyright 2019 The FATE Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "feature-binning-meta.proto";

package com.webank.ai.fate.common.mlmodel.buffer;
option java_outer_classname = "FeatureSelectionMeta";

message FeatureSelectionMeta {
    repeated string filter_methods = 1;
    bool local_only = 2;
    repeated string select_cols = 3;
    UniqueValueParam unique_param = 4;
    IVSelectionParam iv_param = 5;
    CoeffOfVarSelectionParam coe_param = 6;
    OutlierColsSelectionParam outlier_param = 7;

}

message UniqueValueParam {
    double eps = 1;
}

message IVSelectionParam{
    double value_threshold = 1;
    double percentile_threshold = 2;
    FeatureBinningMeta bin_param = 3;
}

message CoeffOfVarSelectionParam {
    double value_threshold = 1;
}

message OutlierColsSelectionParam {
    double percentile = 1;
    double upper_threshold = 2;
}